--- a/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj
+++ b/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj
@@ -144,7 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Frustom.cpp" />
+    <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Helper\BufferHelper.cpp" />
     <ClCompile Include="Helper\ErrorLog.cpp" />
     <ClCompile Include="main.cpp" />
@@ -271,7 +271,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Frustom.h" />
+    <ClInclude Include="QuadTree.h" />
     <ClInclude Include="Helper\BufferHelper.h" />
     <ClInclude Include="Helper\BufferType.h" />
     <ClInclude Include="Helper\ErrorLog.h" />
