--- a/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj.filters
+++ b/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj.filters
@@ -96,9 +96,6 @@
     <ClCompile Include="Scene\ModelHelper.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Setup\ShadowHelper.cpp">
-      <Filter>Source Files\Setup</Filter>
-    </ClCompile>
     <ClCompile Include="Setup\ParticleHelper.cpp">
       <Filter>Source Files\Setup</Filter>
     </ClCompile>
@@ -107,6 +104,12 @@
     </ClCompile>
     <ClCompile Include="QuadTree.cpp">
       <Filter>Source Files\Helper</Filter>
+    </ClCompile>
+    <ClCompile Include="Setup\mainRender.cpp">
+      <Filter>Source Files\Setup</Filter>
+    </ClCompile>
+    <ClCompile Include="Setup\ShadowHelper.cpp">
+      <Filter>Source Files\Setup</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -184,9 +187,6 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files\View</Filter>
     </ClInclude>
-    <ClInclude Include="Setup\ShadowHelper.h">
-      <Filter>Header Files\Setup</Filter>
-    </ClInclude>
     <ClInclude Include="Setup\ParticleHelper.h">
       <Filter>Header Files\Setup</Filter>
     </ClInclude>
@@ -195,6 +195,12 @@
     </ClInclude>
     <ClInclude Include="QuadTree.h">
       <Filter>Header Files\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="Setup\mainRender.h">
+      <Filter>Header Files\Setup</Filter>
+    </ClInclude>
+    <ClInclude Include="Setup\ShadowHelper.h">
+      <Filter>Header Files\Setup</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
