--- a/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj
+++ b/Rasterizer_3D_Project/Rasterizer_3D_Project.vcxproj
@@ -271,6 +271,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Id3d11.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="Helper\BufferHelper.h" />
     <ClInclude Include="Helper\BufferType.h" />
